--- a/podcasts.yml
+++ b/podcasts.yml
@@ -151,7 +151,7 @@ tasks:
   king_falls_am:
     rss: https://audioboom.com/channels/4256036.rss
     set:
-      podcast: "King Falls AM"
+      podcast_name: "King Falls AM"
       pcast_url: http://pca.st/q8At
     template: podcast
 
