--- a/podcasts.yml
+++ b/podcasts.yml
@@ -302,6 +302,13 @@ tasks:
       pcast_url: http://pca.st/skepticsguide
     template: podcast
 
+  this_american_life:
+    rss: http://feed.thisamericanlife.org/talpodcast
+    set:
+      podcast_name: "This American Life"
+      pcast_url: http://pca.st/americanlife
+    template: podcast
+
   software_engineering_daily:
     rss: http://softwareengineeringdaily.com/feed/podcast
     set:
