--- a/podcasts.yml
+++ b/podcasts.yml
@@ -138,6 +138,13 @@ tasks:
       pcast_url: http://pca.st/OJYc
     template: podcast
 
+  dear_hbr:
+    rss: http://feeds.harvardbusiness.org/harvardbusiness/dear-hbr
+    set:
+      podcast_name: "Dear HBR"
+      pcast_url: https://pca.st/dearhbr
+    template: podcast
+
   ear_hustle:
     rss: http://feeds.earhustlesq.com/earhustlesq
     set:
