--- a/rss_feeds.yml
+++ b/rss_feeds.yml
@@ -185,7 +185,18 @@ tasks:
       title: "Gizmodo | {{ title }}"
     template:
       - rss_output
-
+      
+  hacker_news:
+    rss:
+      url: https://news.ycombinator.com/rss
+      other_fields: [ comments ]
+      all_entries: no
+    set:
+      title: "Hacker News | {{ title }}"
+      description: "Link: {{ url }}<br />Comments: {{ comments }}"
+    template:
+      - rss_output
+    
   hosted_graphite:
     rss:
       url: https://blog.hostedgraphite.com/feed/
