Adding output to slack blog

--- a/rss_feeds.yml
+++ b/rss_feeds.yml
@@ -326,6 +326,8 @@ tasks:
     set:
       title: "Slack | {{ title }}"
       description: "{{ content }}"
+    template:
+      - rss_output
 
   smbc_comics:
     rss: 
